tests/specs/ecosystem/ayonli/jsext/0_8_25.test
ayonli/jsext/0.8.25
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2411 [ERROR]: Property '"--"' of type 'string[] | undefined' is not assignable to 'string' index type 'string | number | boolean | (string | number | boolean)[]'.
  "--"?: string[];
  ~~~~
    at file://<tmpdir>/cli.ts:54:3

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:79:45

Found 2 errors.

